# OST2PST

./: .gitignore  CHANGELOG.md  LICENSE  OST2PST.txt  README.md  build.ps1  ost2pst.py  ost2pst.spec  pyproject.toml  requirements.txt  version_info.txt
.github/workflows/: test.yml
skills/ost-extract/: SKILL.md
tests/: test_build_eml.py  test_helpers.py  test_mapi.py
